fix for show images button overlapping message action dropdown

--- a/src/sass/messageView.scss
+++ b/src/sass/messageView.scss
@@ -124,7 +124,7 @@
             margin: 0;
             background: $read;
             box-shadow: 0 1px 0 $read;
-            z-index: 9;
+            z-index: 1;
             a {
                 display: block;
                 text-decoration: none;
